@@ -1,5 +1,11 @@
 2015-01-23  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* Parsetexi/lib/Parsetexi.pm: Update a comment.
+	* end_line.c (end_line): Check return value of lookup_command 
+	correctly.
+
+2015-01-23  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tree_types.h (enum extra_type): Add extra_string value.
 	* extra.c (add_extra_string): New function.
 	* dump_perl.c (dump_extra) <extra_string>: Support.
